--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,23 @@
+.form-group {
+  margin-bottom: 0;
+}
+
 .form-group.row {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  margin: 0;
+}
+
+.col-xs-12 {
+  padding: 0;
 }
 
 .col-xs-12.grow-2 {
   flex-grow: 2;
+}
+
+.checkbox:last-child {
+  margin-bottom: 0;
 }
 
 .w-full {
@@ -46,9 +58,9 @@
 
 .fl-form .form-html {
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  column-gap: 10px;
-  padding: 0 10px;
+  grid-template-columns: repeat(4, 24%);
+  grid-gap: 10px;
+  padding: 10px;
 }
 
 .fl-form.placeholder .form-html {
@@ -556,6 +568,7 @@ html[dir="rtl"] .radio.radio-icon input[type="radio"] + label > span.check {
   line-height: 44px;
   position: relative;
   color: #333;
+  margin-bottom: -7px;
 }
 
 .select-proxy-display.readonly,
@@ -860,7 +873,7 @@ html[dir="rtl"] .radio.radio-icon input[type="radio"] + label > span.check {
 /* STAR RATING */
 [_type="flStarRating"] .inverse-direction {
   overflow: hidden;
-  display: inline-block;
+  display: block;
   text-align: left;
   direction: rtl;
 }
@@ -892,6 +905,7 @@ html[dir="rtl"] .radio.radio-icon input[type="radio"] + label > span.check {
   height: 30px;
   padding: 0;
   cursor: pointer;
+  margin-bottom: 0;
 }
 
 [_type="flStarRating"] .rating-star .fa {
@@ -1158,6 +1172,10 @@ html[dir="rtl"] .radio.radio-icon input[type="radio"] + label > span.check {
   padding-right: 0;
 }
 
+[data-widget-package="com.fliplet.form-builder"] .form-group.fl-date-picker > .form-control,
+[data-widget-package="com.fliplet.form-builder"] .form-group.fl-time-picker > .form-control {
+  padding-right: 0 !important;
+}
 /* LINE BREAK */
 
 form hr {
@@ -1490,6 +1508,13 @@ form hr {
 
 .geolocation.btn {
   column-gap: 10px;
+  display: inline-block !important;
+}
+
+.geolocation.btn svg {
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
 }
 
 .geolocation.text-info {
@@ -1497,12 +1522,6 @@ form hr {
   color: #474a74;
   font-weight: 400;
   line-height: 16px;
-}
-
-@media screen and (min-width: 640px) {
-  .geolocation.btn-primary {
-    display: flex;
-  }
 }
 
 @media screen and (max-width: 360px) {
@@ -1521,10 +1540,10 @@ form hr {
   }
 
   .form-group.w-1_4 .fl-time-picker > .form-control {
-    padding-left: 40px;
+    padding-left: 40px !important;
   }
 
-  [data-widget-package="com.fliplet.form-builder"].form-group.w-1_4 .fl-time-picker > .fa {
+  [data-widget-package="com.fliplet.form-builder"] .form-group.w-1_4 .fl-time-picker > .fa {
     width: 34px;
   }
 }
